adicionada logo e ajustada para ela nao ficar com borda redonda

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="header">
-      <img class="header__logo" src="img/logo.png" alt="Logo da comunidade feministech" />
+      <img src="img/feminis_logo_ears.png" alt="Logo da comunidade feministech" />
       <div class="header__intro">
         <h1 class="header__titulo">Feministech</h1>
         <h2>
