ajustadas cores do site pra se adequar a paleta da feministech

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Feministech - Links</title>
+    <link rel="shortcut icon" type="image/jpg" href="img/feminis_logo.png"/>
   </head>
   <body>
     <header class="header">
