logo e titulo no header movidos para cima

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   </head>
   <body>
     <header class="header">
-      <img src="img/feminis_logo_ears.png" alt="Logo da comunidade feministech" />
-      <div class="header__intro">
+      <div class="header__container-logo">
+        <img src="img/feminis_logo_ears.png" alt="Logo da comunidade feministech" />
         <h1 class="header__titulo">Feministech</h1>
+      </div>
+      <div class="header__intro">
         <h2>
           Somos um grupo de pessoas que se identificam no feminino e não
           binárias que compartilham conhecimento fazendo lives sobre tecnologia
