atualizaçao de acordo com a nova identidade visual da comunidade

--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
 <link rel="manifest" href="/img/favicon/site.webmanifest">
 
     <title>Feministech - Links</title>
-    <link rel="shortcut icon" type="image/jpg" href="img/feminis_logo.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="img/nova_logo.png"/>
   </head>
   <body>
     <header class="header">
-      <img src="img/feminis_logo_ears.png" alt="Logo da comunidade feministech" />
+      <img src="img/nova_logo.png" alt="Logo da comunidade feministech" />
       <div class="header__intro">
         <h1 class="header__titulo">Feministech</h1>
         <h2>
-          Somos um grupo de pessoas que se identificam no feminino e não
-          binárias que compartilham conhecimento fazendo lives sobre tecnologia
-          na Twitch.
+          Somos um grupo de pessoas que se identificam no feminino ou como não binárias que compartilham conhecimento sobre tecnologia fazendo lives, escrevendo artigos, produzindo vídeos ou postagens, entre outros.
         </h2>
       </div>
     </header>
