--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         >
       </li>
       <li>
-        <a href="https://www.instagram.com/feminis_cat/" target="_blank" rel="noopener"
-          >Derreta com as fotos da nossa mascote Feminiscat</a
+        <a href="https://www.instagram.com/feminis_tech/" target="_blank" rel="noopener"
+          >Acompanhe a gente no instagram</a
         >
       </li>
     </ul>
@@ -78,7 +78,7 @@
       </li>
       <li>
         <a
-          href="https://www.instagram.com/feminis_cat/"
+          href="https://www.instagram.com/feminis_tech/"
           target="_blank"
           rel="noopener"
           ><ion-icon name="logo-instagram"></ion-icon
